--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,8 @@
 RewriteEngine On
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ index.php/$1 [L]
+
+# Jika file atau direktori tidak ditemukan
+RewriteCond %{REQUEST_FILENAME} !-f [NC]
+RewriteCond %{REQUEST_FILENAME} !-d [NC]
+
+# Arahkan semua permintaan ke index.php
+RewriteRule ^(.*)$ index.php/$1 [L,NC]
